Correction d'un bug graphique provisoire pour une meilleure visibilité de l'interface lors du passage au design responsive.

--- a/star-wars-blog/src/styles/Home.css
+++ b/star-wars-blog/src/styles/Home.css
@@ -5,6 +5,7 @@
     height: 600px;
     padding-top: 100px;
     cursor: default;
+    overflow: hidden;
 }
 
 .welcome-message {
